; ModuleID = '/home/carl/AnghaBench/freebsd/stand/libsa/extr_bootparam.c_xdr_string_encode.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/libsa/extr_bootparam.c_xdr_string_encode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xdr_string_encode(i8** %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = add nsw i32 %10, 3
  %12 = and i32 %11, -4
  store i32 %12, i32* %9, align 4
  %13 = load i8**, i8*** %4, align 8
  %14 = load i8*, i8** %13, align 8
  %15 = bitcast i8* %14 to i32*
  store i32* %15, i32** %7, align 8
  %16 = load i8**, i8*** %4, align 8
  %17 = load i8*, i8** %16, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 4
  store i8* %18, i8** %16, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @htonl(i32 %19)
  %21 = load i32*, i32** %7, align 8
  store i32 %20, i32* %21, align 4
  %22 = load i8**, i8*** %4, align 8
  %23 = load i8*, i8** %22, align 8
  store i8* %23, i8** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i8**, i8*** %4, align 8
  %26 = load i8*, i8** %25, align 8
  %27 = sext i32 %24 to i64
  %28 = getelementptr inbounds i8, i8* %26, i64 %27
  store i8* %28, i8** %25, align 8
  %29 = load i8*, i8** %5, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @bcopy(i8* %29, i8* %30, i32 %31)
  ret i32 0
}

declare dso_local i32 @htonl(i32) #1

declare dso_local i32 @bcopy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
